creategame joingame fixes

--- a/ReadMe.me
+++ b/ReadMe.me
@@ -1,2 +1,2 @@
-dotnet ef migrations add NullableFields --context SenWDbContext --startup-project ../SenWGames.Web
+dotnet ef migrations add ChangeInGroup --context SenWDbContext --startup-project ../SenWGames.Web
 dotnet ef database update --context SenWDbContext --startup-project ../SenWGames.Web
